@@ -1,5 +1,8 @@
 2015-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/annotate.c (RenderFreetype): Silence Coverity 14396 and
+	44755 "Unused value".
+
 	* coders/wpg.c (LoadWPG2Flags): Silence Coverity 10273 and 10253
 	"Unused value".
 
